--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Unity WebGL Player | HC</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+	
+	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+	
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
-    <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/HC_Alpha.json", {onProgress: UnityProgress});
-    </script>
+	<script src="transfer.js"></script>
+
   </head>
   <body>
     <div class="webgl-content">
@@ -21,5 +24,9 @@
         <div class="title">HC</div>
       </div>
     </div>
+	<div>Teachable Machine Pose Model</div>
+	<button type="button" onclick="init()">Start</button>
+    <div><canvas id="canvas"></canvas></div>
+    <div id="label-container"></div>
   </body>
 </html>
